--- a/Task6.vcxproj.filters
+++ b/Task6.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClCompile Include="Cvalue.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Task6.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
